# serde_dbus

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: align.rs  de.rs  error.rs  lib.rs  message.rs  primitives.rs  ser.rs
src/de/: internal.rs
src/ser/: internal.rs  message_builder.rs  serializer_policy.rs
