[package]
name = "serde_dbus"
version = "0.1.5"
authors = ["Jimmy Hartzell <jah259@cornell.edu>"]
edition = "2018"
description = "Serde Implementation for DBus"
license = "MIT"
repository = "https://github.com/jhartzell/serde_dbus/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
zbus = { version = "2.2.0", optional = true }

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.8"
